<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>gatling-tests</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>gatling-tests</name>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <gatling.version>3.14.5</gatling.version>
        <gatling.plugin.version>4.9.6</gatling.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-core-java</artifactId>
            <version>${gatling.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-http-java</artifactId>
            <version>${gatling.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
            <version>${gatling.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-maven-plugin</artifactId>
                <version>${gatling.plugin.version}</version>
                <configuration>
                    <jvmArgs>
                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
